--- a/portfolio/main.css
+++ b/portfolio/main.css
@@ -62,6 +62,9 @@ p a{
 .container a:hover {
     text-decoration: underline double;
 }
+.container a:active {
+    color:  var(--dark-blue);
+}
 img {
     display: block;
     height: 100%;
@@ -170,13 +173,17 @@ div.container {
     transform: translate(-50%, -50%);
 }
 .card .card-text {
+    color: white;
     opacity: 0%;
 }
 .card:hover .card-text {
     opacity: 100%;
     transition: all 0.2s ease;
-    color: white;
 }
+.card:active {
+    background-color:  var(--dark-blue);
+}
+
 .compare {
     display: grid;
     grid-template-columns: repeat(auto-fill, minmax(25rem, auto));    
@@ -223,8 +230,8 @@ div.container {
     margin-left: 1rem;
 }
 .container ul {
-    list-style: "»";
-    margin-left: .5em;
+    list-style: "»   ";
+    margin-left: 1.3rem;
 }
 .container li {
     color: var(--bright-blue);
@@ -234,7 +241,7 @@ div.container {
     max-width: 50em;
 }
 li p {
-    margin:  0 0 0 1rem;
+    margin:  0;
     color: black;
     font-weight: 400;
 }
