--- a/portfolio/main.css
+++ b/portfolio/main.css
@@ -6,11 +6,7 @@
     --bright-blue-fade: #009acd55;
     --medium-blue: #007FA9;
     --dark-blue: #00698c;
-}
-
-@font-face {
-    font-family: 'Avenir';
-    src: url(files/Avenir.ttc);
+    --default: #474747;
 }
 
 * {
@@ -20,40 +16,60 @@
 }
 
 html {
-    color: #222;
+    color: var(--default);
     font-size: 1em;
     line-height: 1.4;
-    font-family: sans-serif;
+    font-family: 'Jost', sans-serif;
     scroll-behavior: smooth;
     text-rendering: optimizeLegibility;
 }
 body {
     background: #fff;    
-    margin:0;
+    margin: 0 0 10em 0;
+    display: flex;
+    flex-direction: column;
+}
+html, body {
+    height: 100%;
 }
         
-h1, h2, h3, p, ul {
-    font-family: 'Avenir', 'Nunito', sans-serif;
+h1, h2, ul {
     line-height: 1.3;
 }
 h1 {
     font-size: 4rem;
-    padding-top: 3rem;
     color: var(--bright-blue);
+    font-weight: 500;
 }
 h2 {
-    font-size: 1.5rem;
+    font-weight: 600;
 }
-h1, h2, h3 {
+h2.resume {
     font-weight: 700;
+    text-transform: uppercase;
+    color: var(--bright-blue);
+    padding-top: 1.5rem;
+    margin-bottom: 0;
+    line-height: 1.5em;
+}
+h3 {
+    font-weight: 700;
+    color: black;
+    font-size: 1rem;
+    line-height: 1rem;
 }
 p {
     font-size: 1rem;
     line-height: 1.5;
     margin-bottom: 1rem;
 }
+div.container {
+    margin: 0 auto;
+    padding: 4em;
+}
+
 .container a {
-    font-weight: 900;
+    font-weight: 700;
     text-decoration: none;
 }
 .container a:visited {
@@ -78,13 +94,7 @@ img {
 img.logo{
     max-height: 10em;
     max-width: 15em;
-    margin-bottom: 1em;
-    padding-top: 2em;
-}
-
-div.container {
-    margin: 0 auto;
-    padding: 0 4em;
+    padding: 2em;
 }
 
 
@@ -94,50 +104,64 @@ div.container {
     justify-content: center;
     align-items: center;
 }
-.home-title {
-    font-size: 4rem;
-}
-.logo, .main-nav, .links {
-    font-weight: 900;
+.logo, .main-nav, .footer-nav {
+    font-weight: 700;
     list-style: none;
     text-transform: lowercase;
     text-align: center;
 }
-.links {
-    display: flex;
-    flex-direction: row;
-}
-.links a{
-    margin-right: 1rem;
-    color: var(--bright-blue);
-
+header {
+    background-color: var(--bright-blue);
 }
 .main-nav {
-    font-size: 1.25em;
+    font-size: 1.3rem;
     display: flex;
     flex-direction: column;
     width: 100%;
     letter-spacing: 0.3rem;
 }
 ul.main-nav a:hover {        
-    color:  var(--medium-blue);
-    border-bottom: var(--bright-blue) .2rem;
-    text-decoration: underline double var(--medium-blue);
+    color:  white;
+    text-decoration: underline double white;
     text-underline-offset: 0.5em;
 }
 ul.main-nav a:active {        
     transition: all 0.2s ease;
-    color:  var(--dark-blue);
+    color:  #ffffff75;
+}
+.main-nav a {
+    color: white;
+    text-decoration: none;
+    display: block;
+    padding-bottom: 2rem;
+}
+.main-nav a:visited {
+    color: white;
 }
 
-.main-nav a {
+.container {
+    flex: 1 0 auto;
+}
+footer {
+    flex-shrink: 0;
+}
+.footer-nav {
+    justify-content: center;
+    margin-bottom: 1rem;
+    display: flex;
+}
+.footer-nav a {
     color: var(--bright-blue);
     text-decoration: none;
     display: block;
-    padding: 1rem;
+    padding: .5rem;
 }
-.main-nav a:visited, .logo a:visited {
-    color: var(--bright-blue);
+.icon {
+    width: 3rem;
+    border: thick solid var(--bright-blue);
+    border-width: .25rem;
+    border-radius: .5em;
+    background-color: var(--bright-blue);
 }
 
 .card {
@@ -195,15 +219,18 @@ ul.main-nav a:active {
 
 .button {
     display: inline-block;
-    font-family: 'Avenir', 'Nunito', sans-serif;
+    font-family: 'Jost', sans-serif;
     color: white;
     font-weight: 900;
-    background-color: var(--medium-blue);
+    background-color: var(--bright-blue);
     padding: .75em;
     border-radius: .35em;
     margin-top: 0.5rem;
 }
-.button:hover {        
+a.button:visited {
+    color: white;
+}
+a.button:hover {        
     transition: all 0.2s ease;
     color:  var(--medium-blue);
     background-color: white;
@@ -215,29 +242,52 @@ ul.main-nav a:active {
 .button, a.button, a.button:hover {
     text-decoration: none;
 }
-.button:active {
+a.button:active {
     outline-style: inset;
     color:  var(--dark-blue);
 }
 
-.list-block {
-    margin-left: 1rem;
-}
+
 .container ul {
     list-style: "»   ";
-    margin-left: 1.3rem;
+    margin-left: 1.5rem;
+    margin-bottom: 1rem;
 }
 .container li {
-    color: var(--medium-blue);
-    font-weight: 900;
+    color: var(--bright-blue);
+    font-weight: 600;
 }
 .container p{
-    max-width: 50em;
+    max-width: 50rem;
 }
 li p {
     margin:  0;
-    color: black;
+    color: var(--default);
     font-weight: 400;
+}
+ul.list-col, ul.sublist-col {
+    list-style: none;
+    margin-left: 0;
+}
+.list-col {
+    display: flex;
+    flex-wrap: wrap;
+    max-width: 50rem;
+}
+.list-col li {
+    padding-right: 1rem;
+    min-width: 10rem;
+}
+p.p-subhead {
+    margin-bottom: 0rem;
+    font-weight: 400;
+    color: black;
+}
+.dates {
+    line-height: 1rem;
+    font-style: italic;
+    font-weight: 400;
+    margin-bottom: 0;
 }
 
 .box {
@@ -265,15 +315,17 @@ h2.preview {
   /*    NAV BAR    */
     .main-nav {
         flex-direction: row;
-        justify-content: space-around;
+        justify-content: space-between;
         max-width: 40rem;
     }
-    .main-nav a {
-        padding: 2em;
+    header {
+        padding: auto 4rem;
+
     }
-    img.logo {
-        margin: 0;
-    }    
+    .main-nav a {
+        width: 10rem;
+        text-align: right;
+    }
 }
 
 @media only screen and (min-width: 60em) {
@@ -285,10 +337,9 @@ h2.preview {
         justify-content: flex-end;
         max-width: none;
     }
-    img.logo {
-        padding: 1em;
+    .main-nav a {
+        margin: 2rem 4rem 0rem 0rem;
     }
-    
     div.container {
         max-width: 100em;
     }
